--- a/jupyter_notebooks/CV_Self_Driving_Car.ipynb
+++ b/jupyter_notebooks/CV_Self_Driving_Car.ipynb
@@ -182,7 +182,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Please watch the video!](videos/cv_self_driving_car.mp4)"
+    "[Please watch the video!](../videos/cv_self_driving_car.mp4)"
    ]
   },
   {
@@ -203,7 +203,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Please watch the video!](videos/cv_self_driving_car1.mp4)"
+    "[Please watch the video!](../videos/cv_self_driving_car1.mp4)"
    ]
   },
   {
