--- a/jupyter_notebooks/BD_Spark_Standalone.ipynb
+++ b/jupyter_notebooks/BD_Spark_Standalone.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/jetson_main.jpg)"
+    "![title](../images/jetson_main.jpg)"
    ]
   },
   {
@@ -153,7 +153,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/spark_lmaster.png)"
+    "![title](../images/spark_lmaster.png)"
    ]
   },
   {
@@ -181,7 +181,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/spark_lslave.png)"
+    "![title](../images/spark_lslave.png)"
    ]
   },
   {
@@ -216,7 +216,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/spark_scala.png)"
+    "![title](../images/spark_scala.png)"
    ]
   },
   {
@@ -237,7 +237,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/spark_python.png)"
+    "![title](../images/spark_python.png)"
    ]
   },
   {
@@ -278,7 +278,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
