--- a/jupyter_notebooks/BD_Hadoop_MapReduce.ipynb
+++ b/jupyter_notebooks/BD_Hadoop_MapReduce.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/jetson_main.jpg)"
+    "![title](../images/jetson_main.jpg)"
    ]
   },
   {
@@ -148,7 +148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/hadoop_one_ver.png)"
+    "![title](../images/hadoop_one_ver.png)"
    ]
   },
   {
@@ -189,7 +189,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/hadoop_one_res1.png)"
+    "![title](../images/hadoop_one_res1.png)"
    ]
   },
   {
@@ -212,7 +212,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/hadoop_one_res2.png)"
+    "![title](../images/hadoop_one_res2.png)"
    ]
   },
   {
@@ -227,7 +227,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/hadoop_one_res3.png)"
+    "![title](../images/hadoop_one_res3.png)"
    ]
   },
   {
@@ -254,7 +254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
