--- a/jupyter_notebooks/GCP_Anthos_Docker.ipynb
+++ b/jupyter_notebooks/GCP_Anthos_Docker.ipynb
@@ -155,7 +155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/anthos_p02_01.png\" align=\"left\"/>"
+    "<img src=\"../images/anthos_p02_01.png\" align=\"left\"/>"
    ]
   },
   {
@@ -170,7 +170,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/anthos_p02_02.png\" align=\"left\"/>"
+    "<img src=\"../images/anthos_p02_02.png\" align=\"left\"/>"
    ]
   },
   {
@@ -185,7 +185,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/anthos_p02_03.png\" align=\"left\"/>"
+    "<img src=\"../images/anthos_p02_03.png\" align=\"left\"/>"
    ]
   },
   {
@@ -200,7 +200,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/anthos_p02_04.png\" align=\"left\"/>"
+    "<img src=\"../images/anthos_p02_04.png\" align=\"left\"/>"
    ]
   },
   {
@@ -216,14 +216,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/anthos_p02_05.png\" align=\"left\"/>"
+    "<img src=\"../images/anthos_p02_05.png\" align=\"left\"/>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/anthos_p02_06.png\" align=\"left\"/>"
+    "<img src=\"../images/anthos_p02_06.png\" align=\"left\"/>"
    ]
   },
   {
@@ -238,7 +238,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/anthos_p02_07.png\" align=\"left\"/>"
+    "<img src=\"../images/anthos_p02_07.png\" align=\"left\"/>"
    ]
   },
   {
@@ -254,7 +254,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/anthos_p02_08.png\" align=\"left\"/>"
+    "<img src=\"../images/anthos_p02_08.png\" align=\"left\"/>"
    ]
   },
   {
@@ -269,7 +269,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/anthos_p02_09.png\" align=\"left\"/>"
+    "<img src=\"../images/anthos_p02_09.png\" align=\"left\"/>"
    ]
   },
   {
@@ -284,7 +284,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/anthos_p02_10.png\" align=\"left\"/>"
+    "<img src=\"../images/anthos_p02_10.png\" align=\"left\"/>"
    ]
   },
   {
