--- a/jupyter_notebooks/GCP_CR.ipynb
+++ b/jupyter_notebooks/GCP_CR.ipynb
@@ -55,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/cr_p01_01.png\" align=\"left\"/>"
+    "<img src=\"../images/cr_p01_01.png\" align=\"left\"/>"
    ]
   },
   {
@@ -69,7 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/cr_p01_02.png\" align=\"left\"/>"
+    "<img src=\"../images/cr_p01_02.png\" align=\"left\"/>"
    ]
   },
   {
@@ -83,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/cr_p01_03.png\" align=\"left\"/>"
+    "<img src=\"../images/cr_p01_03.png\" align=\"left\"/>"
    ]
   },
   {
@@ -97,7 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/cr_p01_04.png\" align=\"left\"/>"
+    "<img src=\"../images/cr_p01_04.png\" align=\"left\"/>"
    ]
   }
  ],
