--- a/jupyter_notebooks/GCP_CSR.ipynb
+++ b/jupyter_notebooks/GCP_CSR.ipynb
@@ -54,7 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/csr_p01_01.png\" align=\"left\"/>"
+    "<img src=\"../images/csr_p01_01.png\" align=\"left\"/>"
    ]
   },
   {
@@ -68,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/csr_p01_02.png\" align=\"left\"/>"
+    "<img src=\"../images/csr_p01_02.png\" align=\"left\"/>"
    ]
   },
   {
@@ -82,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/csr_p01_03.png\" align=\"left\"/>"
+    "<img src=\"../images/csr_p01_03.png\" align=\"left\"/>"
    ]
   },
   {
@@ -96,7 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/csr_p01_04.png\" align=\"left\"/>"
+    "<img src=\"../images/csr_p01_04.png\" align=\"left\"/>"
    ]
   },
   {
@@ -110,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/csr_p01_05.png\" align=\"left\"/>"
+    "<img src=\"../images/csr_p01_05.png\" align=\"left\"/>"
    ]
   },
   {
