--- a/jupyter_notebooks/GCP_GKE_Autopilot1.ipynb
+++ b/jupyter_notebooks/GCP_GKE_Autopilot1.ipynb
@@ -61,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_auto_p01_01.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_auto_p01_01.png\" align=\"left\"/>"
    ]
   },
   {
@@ -75,7 +75,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_auto_p01_02.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_auto_p01_02.png\" align=\"left\"/>"
    ]
   },
   {
@@ -89,7 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_auto_p01_03.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_auto_p01_03.png\" align=\"left\"/>"
    ]
   },
   {
@@ -103,7 +103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_auto_p01_04.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_auto_p01_04.png\" align=\"left\"/>"
    ]
   },
   {
@@ -117,7 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_auto_p01_05.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_auto_p01_05.png\" align=\"left\"/>"
    ]
   },
   {
@@ -132,14 +132,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_auto_p01_06.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_auto_p01_06.png\" align=\"left\"/>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_auto_p01_07.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_auto_p01_07.png\" align=\"left\"/>"
    ]
   },
   {
@@ -154,7 +154,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_auto_p01_08.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_auto_p01_08.png\" align=\"left\"/>"
    ]
   },
   {
@@ -169,7 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_auto_p01_09.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_auto_p01_09.png\" align=\"left\"/>"
    ]
   },
   {
@@ -183,7 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_auto_p01_10.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_auto_p01_10.png\" align=\"left\"/>"
    ]
   },
   {
@@ -197,7 +197,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_auto_p01_11.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_auto_p01_11.png\" align=\"left\"/>"
    ]
   },
   {
@@ -211,14 +211,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_auto_p01_12.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_auto_p01_12.png\" align=\"left\"/>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_auto_p01_13.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_auto_p01_13.png\" align=\"left\"/>"
    ]
   },
   {
@@ -233,7 +233,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_auto_p01_14.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_auto_p01_14.png\" align=\"left\"/>"
    ]
   },
   {
@@ -247,7 +247,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_auto_p01_15.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_auto_p01_15.png\" align=\"left\"/>"
    ]
   }
  ],
