--- a/jupyter_notebooks/GCP_GKE_Autopilot2.ipynb
+++ b/jupyter_notebooks/GCP_GKE_Autopilot2.ipynb
@@ -61,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_auto_p01_01.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_auto_p01_01.png\" align=\"left\"/>"
    ]
   },
   {
@@ -75,7 +75,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_auto_p01_02.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_auto_p01_02.png\" align=\"left\"/>"
    ]
   },
   {
@@ -89,7 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_auto_p01_03.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_auto_p01_03.png\" align=\"left\"/>"
    ]
   },
   {
@@ -103,7 +103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_auto_p01_04.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_auto_p01_04.png\" align=\"left\"/>"
    ]
   },
   {
@@ -117,7 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_auto_p01_05.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_auto_p01_05.png\" align=\"left\"/>"
    ]
   },
   {
@@ -131,7 +131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_auto_p02_06.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_auto_p02_06.png\" align=\"left\"/>"
    ]
   },
   {
@@ -146,14 +146,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_auto_p02_07.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_auto_p02_07.png\" align=\"left\"/>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_auto_p02_08.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_auto_p02_08.png\" align=\"left\"/>"
    ]
   },
   {
@@ -168,7 +168,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_auto_p02_09.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_auto_p02_09.png\" align=\"left\"/>"
    ]
   },
   {
@@ -183,7 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_auto_p02_10.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_auto_p02_10.png\" align=\"left\"/>"
    ]
   },
   {
@@ -197,7 +197,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_auto_p02_11.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_auto_p02_11.png\" align=\"left\"/>"
    ]
   },
   {
@@ -211,7 +211,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_auto_p02_12.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_auto_p02_12.png\" align=\"left\"/>"
    ]
   },
   {
