--- a/jupyter_notebooks/GCP_GKE_CICD.ipynb
+++ b/jupyter_notebooks/GCP_GKE_CICD.ipynb
@@ -61,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_auto_p03_01.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_auto_p03_01.png\" align=\"left\"/>"
    ]
   },
   {
@@ -82,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_auto_p03_02.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_auto_p03_02.png\" align=\"left\"/>"
    ]
   },
   {
@@ -96,7 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_auto_p03_03.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_auto_p03_03.png\" align=\"left\"/>"
    ]
   },
   {
@@ -110,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_auto_p03_04.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_auto_p03_04.png\" align=\"left\"/>"
    ]
   },
   {
@@ -131,7 +131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_auto_p03_05.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_auto_p03_05.png\" align=\"left\"/>"
    ]
   },
   {
@@ -145,7 +145,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_auto_p03_06.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_auto_p03_06.png\" align=\"left\"/>"
    ]
   },
   {
@@ -173,7 +173,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_auto_p03_07.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_auto_p03_07.png\" align=\"left\"/>"
    ]
   },
   {
@@ -187,7 +187,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_auto_p03_08.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_auto_p03_08.png\" align=\"left\"/>"
    ]
   },
   {
@@ -201,7 +201,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_auto_p03_09.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_auto_p03_09.png\" align=\"left\"/>"
    ]
   },
   {
@@ -222,7 +222,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_auto_p03_10.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_auto_p03_10.png\" align=\"left\"/>"
    ]
   },
   {
@@ -243,7 +243,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_auto_p03_11.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_auto_p03_11.png\" align=\"left\"/>"
    ]
   },
   {
@@ -257,7 +257,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_auto_p03_12.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_auto_p03_12.png\" align=\"left\"/>"
    ]
   },
   {
@@ -271,7 +271,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_auto_p03_13.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_auto_p03_13.png\" align=\"left\"/>"
    ]
   },
   {
@@ -285,7 +285,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_auto_p03_14.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_auto_p03_14.png\" align=\"left\"/>"
    ]
   }
  ],
