--- a/jupyter_notebooks/GCP_GKE_Jenkins.ipynb
+++ b/jupyter_notebooks/GCP_GKE_Jenkins.ipynb
@@ -47,14 +47,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_jenkins_p01_01.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_jenkins_p01_01.png\" align=\"left\"/>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_jenkins_p01_02.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_jenkins_p01_02.png\" align=\"left\"/>"
    ]
   },
   {
@@ -68,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_jenkins_p01_03.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_jenkins_p01_03.png\" align=\"left\"/>"
    ]
   },
   {
@@ -82,14 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_jenkins_p01_04.png\" align=\"left\"/>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Jenkinsfile"
+    "<img src=\"../images/gke_jenkins_p01_04.png\" align=\"left\"/>"
    ]
   },
   {
@@ -103,7 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_jenkins_p01_05.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_jenkins_p01_05.png\" align=\"left\"/>"
    ]
   },
   {
@@ -117,14 +110,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_jenkins_p01_06.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_jenkins_p01_06.png\" align=\"left\"/>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_jenkins_p01_07.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_jenkins_p01_07.png\" align=\"left\"/>"
    ]
   },
   {
@@ -138,7 +131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gke_jenkins_p01_08.png\" align=\"left\"/>"
+    "<img src=\"../images/gke_jenkins_p01_08.png\" align=\"left\"/>"
    ]
   }
  ],
