--- a/jupyter_notebooks/GCP_TF_VM.ipynb
+++ b/jupyter_notebooks/GCP_TF_VM.ipynb
@@ -52,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/tf_p01_01.png\" align=\"left\"/>"
+    "<img src=\"../images/tf_p01_01.png\" align=\"left\"/>"
    ]
   },
   {
@@ -121,7 +121,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/tf_p01_02.png\" align=\"left\"/>"
+    "<img src=\"../images/tf_p01_02.png\" align=\"left\"/>"
    ]
   },
   {
@@ -135,7 +135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/tf_p01_03.png\" align=\"left\"/>"
+    "<img src=\"../images/tf_p01_03.png\" align=\"left\"/>"
    ]
   },
   {
@@ -149,7 +149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/tf_p01_04.png\" align=\"left\"/>"
+    "<img src=\"../images/tf_p01_04.png\" align=\"left\"/>"
    ]
   },
   {
@@ -163,7 +163,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/tf_p01_05.png\" align=\"left\"/>"
+    "<img src=\"../images/tf_p01_05.png\" align=\"left\"/>"
    ]
   },
   {
@@ -177,7 +177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/tf_p01_06.png\" align=\"left\"/>"
+    "<img src=\"../images/tf_p01_06.png\" align=\"left\"/>"
    ]
   },
   {
@@ -191,7 +191,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/tf_p01_07.png\" align=\"left\"/>"
+    "<img src=\"../images/tf_p01_07.png\" align=\"left\"/>"
    ]
   },
   {
