--- a/jupyter_notebooks/GCP_Anthos_Kubernetes.ipynb
+++ b/jupyter_notebooks/GCP_Anthos_Kubernetes.ipynb
@@ -61,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/anthos_p03_01.png\" align=\"left\"/>"
+    "<img src=\"../images/anthos_p03_01.png\" align=\"left\"/>"
    ]
   },
   {
@@ -75,7 +75,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/anthos_p03_02.png\" align=\"left\"/>"
+    "<img src=\"../images/anthos_p03_02.png\" align=\"left\"/>"
    ]
   },
   {
@@ -89,7 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/anthos_p03_03.png\" align=\"left\"/>"
+    "<img src=\"../images/anthos_p03_03.png\" align=\"left\"/>"
    ]
   },
   {
@@ -117,7 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/anthos_p03_04.png\" align=\"left\"/>"
+    "<img src=\"../images/anthos_p03_04.png\" align=\"left\"/>"
    ]
   },
   {
@@ -138,7 +138,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/anthos_p03_05.png\" align=\"left\"/>"
+    "<img src=\"../images/anthos_p03_05.png\" align=\"left\"/>"
    ]
   },
   {
@@ -166,7 +166,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/anthos_p03_06.png\" align=\"left\"/>"
+    "<img src=\"../images/anthos_p03_06.png\" align=\"left\"/>"
    ]
   },
   {
@@ -222,7 +222,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/anthos_p03_07.png\" align=\"left\"/>"
+    "<img src=\"../images/anthos_p03_07.png\" align=\"left\"/>"
    ]
   },
   {
@@ -243,7 +243,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/anthos_p03_08.png\" align=\"left\"/>"
+    "<img src=\"../images/anthos_p03_08.png\" align=\"left\"/>"
    ]
   },
   {
@@ -264,7 +264,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/anthos_p03_09.png\" align=\"left\"/>"
+    "<img src=\"../images/anthos_p03_09.png\" align=\"left\"/>"
    ]
   },
   {
