--- a/jupyter_notebooks/GCP_Vertex_a.ipynb
+++ b/jupyter_notebooks/GCP_Vertex_a.ipynb
@@ -4,21 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# IMAGE CLASSIFICATION"
+    "# Google Cloud Platform"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Keras"
+    "# Vertex AI"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](../images/dl_main.png)"
+    "# Machine Learning"
    ]
   },
   {
@@ -32,190 +32,172 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The objective is to develop an image classification project through a neural network with Keras. \n",
+    "The objective is to develop a classification model using the Iris dataset and Vertex AI.\n",
     "\n",
-    "The first step is to define a set of objects to classify, then grab images of those objects as many as possible per object, one thousand as minimum. Images should be taken in different positions and contexts.\n",
+    "The data set has five columns:\n",
     "\n",
-    "Once the images are ready, define a neural network and train and test it with the images, tune the parameters in order to get the best model, save the model, load it and test it with a picture or on real time."
+    "- sepal length (cm)\n",
+    "- sepal width (cm)\n",
+    "- petal length (cm)\n",
+    "- petal width (cm)\n",
+    "- target\n",
+    "\n",
+    "The Iris dataset contains three classes\n",
+    "\n",
+    "- Setosa (0)\n",
+    "- Versicolor (1)\n",
+    "- Virginica (2)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Requirements"
+    "## Dataset"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hardware Components:\n",
-    "- Raspberry Pi 3 Model B\n",
-    "- Raspberry Camera V2.1"
+    "* Region: us-central1\n",
+    "* Dataset name: dataset_001_ml_tf_iris\n",
+    "* Data type: Tabular\n",
+    "* Objective: Regression/Classification\n",
+    "* Dataset format: csv"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Software:\n",
-    "- Keras\n",
-    "- Python IDE"
+    "<img src=\"../images/gcp_vertex_p01_01.png\" align=\"left\"/>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Others:\n",
-    " \n",
-    "- 4wd car chassis kit\n",
-    "- BMW toy car\n",
-    "- Red ball\n",
-    "- 1,000 images aprox. BMW\n",
-    "- 1,000 images aprox. Red ball"
+    "dataset_001_ml_tf_iris"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Development"
+    "<img src=\"../images/gcp_vertex_p01_02.png\" align=\"left\"/>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4wd car"
+    "## Training"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](../images/dl_front.jpg)"
+    "* Dataset: dataset_001_ml_tf_iris\n",
+    "* Objective: Classification - Auto ML\n",
+    "* Model name: dataset_001_ml_tf_iris_202162922583\n",
+    "* Budget: 1 Maximum node hours"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](../images/dl_lateral.jpg)"
+    "<img src=\"../images/gcp_vertex_p01_03.png\" align=\"left\"/>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Objects to classify"
+    "dataset_001_ml_tf_iris_202162922583"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Red ball"
+    "<img src=\"../images/gcp_vertex_p01_04.png\" align=\"left\"/>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once the red ball is detected by the model, the car will go in reverse and evade the object to the right. "
+    "## Model"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](../images/dl_red_ball.jpg)"
+    "<img src=\"../images/gcp_vertex_p01_05.png\" align=\"left\"/>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### BMW toy car"
+    "## Endpoint"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once the BMW toy car is detected by the model, the car will stop until the car dissapears from the scope."
+    "* Endpoint name: iris_ep\n",
+    "* Traffic split: 100%\n",
+    "* Minimum number of compute nodes: 1\n",
+    "* Region: us-central1"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](../images/dl_bmw_car.jpg)"
+    "<img src=\"../images/gcp_vertex_p01_06.png\" align=\"left\"/>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Result"
+    "iris_ep"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Red Ball"
+    "<img src=\"../images/gcp_vertex_p01_07.png\" align=\"left\"/>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Voila! Please download and watch the video!"
+    "## Prediction"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# [Download - Link!](../videos/dl_on_red_ball.mp4)"
+    "<img src=\"../images/gcp_vertex_p01_08.png\" align=\"left\"/>"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "![title](../images/dl_red_ball_video.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## BMW toy car"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Voila! Please download and watch the video!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# [Download - Link!](../videos/dl_on_bmw_car.mp4)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![title](../images/dl_bmw_car_video.png)"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
