--- a/jupyter_notebooks/ML_TensorFlow_Iris_b.ipynb
+++ b/jupyter_notebooks/ML_TensorFlow_Iris_b.ipynb
@@ -4,21 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# IMAGE CLASSIFICATION"
+    "# Machine Learning"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Keras"
+    "# TensorFlow Model as Web app - Google Colaboratory"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](../images/dl_main.png)"
+    "## Iris Species"
    ]
   },
   {
@@ -32,190 +32,159 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The objective is to develop an image classification project through a neural network with Keras. \n",
+    "The objective is to deploy a TensorFlow model as Web app using Google Colaboratory.\n",
     "\n",
-    "The first step is to define a set of objects to classify, then grab images of those objects as many as possible per object, one thousand as minimum. Images should be taken in different positions and contexts.\n",
+    "Requirements:\n",
     "\n",
-    "Once the images are ready, define a neural network and train and test it with the images, tune the parameters in order to get the best model, save the model, load it and test it with a picture or on real time."
+    "* Google Colaboratory\n",
+    "* Tensorflow model files\n",
+    "* Web app\n",
+    "    - Flask"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Requirements"
+    "## Google Colaboratory"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hardware Components:\n",
-    "- Raspberry Pi 3 Model B\n",
-    "- Raspberry Camera V2.1"
+    "### Directory Structure"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Software:\n",
-    "- Keras\n",
-    "- Python IDE"
+    "<img src=\"../images/ml_gcolab_01.png\" align=\"left\"/>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Others:\n",
-    " \n",
-    "- 4wd car chassis kit\n",
-    "- BMW toy car\n",
-    "- Red ball\n",
-    "- 1,000 images aprox. BMW\n",
-    "- 1,000 images aprox. Red ball"
+    "## TensorFlow Model files"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Development"
+    "### Directory Structure"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4wd car"
+    " * /tf2model/v1/\n",
+    "     * /v1/\n",
+    "         * /assests/\n",
+    "         - keras_metadata.pb \n",
+    "         - saved_model.pb\n",
+    "         * /variables/\n",
+    "             - variables.data-00000-of-00001\n",
+    "             - variables.index"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](../images/dl_front.jpg)"
+    "## Web app"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](../images/dl_lateral.jpg)"
+    "### Directory Structure"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Objects to classify"
+    "* app.py\n",
+    "* /templates/\n",
+    "    - data.html\n",
+    "    - model.html"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Red ball"
+    "### Deployment"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once the red ball is detected by the model, the car will go in reverse and evade the object to the right. "
+    "python3 Iris_Species/app.py"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](../images/dl_red_ball.jpg)"
+    "<img src=\"../images/ml_gcolab_02.png\" align=\"left\"/>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### BMW toy car"
+    "## Voila!"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once the BMW toy car is detected by the model, the car will stop until the car dissapears from the scope."
+    "### TensorFlow Model as Web app - Data\n",
+    "data.html"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](../images/dl_bmw_car.jpg)"
+    "<img src=\"../images/ml_gcolab_03.png\" align=\"left\"/>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Result"
+    "### TensorFlow Model as Web app - Prediction"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Red Ball"
+    "model.html"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Voila! Please download and watch the video!"
+    "<img src=\"../images/ml_gcolab_04.png\" align=\"left\"/>"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "# [Download - Link!](../videos/dl_on_red_ball.mp4)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![title](../images/dl_red_ball_video.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## BMW toy car"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Voila! Please download and watch the video!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# [Download - Link!](../videos/dl_on_bmw_car.mp4)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![title](../images/dl_bmw_car_video.png)"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
