--- a/jupyter_notebooks/GCP_TF_VM.ipynb
+++ b/jupyter_notebooks/GCP_TF_VM.ipynb
@@ -18,10 +18,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Objective: Provision Google Cloud Platform resources using Terraform. \n",
-    "            * VM\n",
-    "            * boot disk\n",
-    "            * network interface."
+    "Objective: Provision the following Google Cloud Platform resources using Terraform. \n",
+    " \n",
+    "Compute Engine \n",
+    "* VM\n",
+    "* Boot disk\n",
+    "* Network interface."
    ]
   },
   {
