--- a/jupyter_notebooks/SAP_PO_R2F.ipynb
+++ b/jupyter_notebooks/SAP_PO_R2F.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SOAP To SOAP Scenario"
+    "# REST Polling To File Scenario"
    ]
   },
   {
@@ -34,8 +34,8 @@
    "source": [
     "Software and online services\n",
     "* SAP Process Orchestration 7.5\n",
-    "* SAP NetWeaver Developer Studio\n",
-    "* SoapUI 5.7.0"
+    "* FTP Server\n",
+    "* SoapUI"
    ]
   },
   {
@@ -49,49 +49,126 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1) ESR / ID"
+    "## 1) CC Transport Protocol - REST Polling"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2) SAP NetWeaver Developer Studio"
+    "## 2) CC Transport Protocol - REST"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1) ESR / ID"
+    "# 1) CC Transport Protocol - REST Polling"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Service Registry"
+    "## Communication Channel"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](../images/sap_po_s2s01.png)"
+    "## Sender"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## External Definition"
+    "![title](../images/sap_po_r2f01.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](../images/sap_po_s2s02.png)"
+    "# File"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Target REST"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Folder: \\target_rest\\output*.json"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### JSON File"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title](../images/sap_po_r2f02.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title](../images/sap_po_r2f03.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Monitoring"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title](../images/sap_po_r2f04.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2) CC Transport Protocol - REST"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Message Mapping"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### price + \" \" + MXN = price MXN "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title](../images/sap_po_r2f05.png)"
    ]
   },
   {
@@ -112,7 +189,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](../images/sap_po_s2s03.png)"
+    "![title](../images/sap_po_r2f06.png)"
    ]
   },
   {
@@ -126,77 +203,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](../images/sap_po_s2s04.png)"
+    "### Method: POST"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Monitoring"
+    "![title](../images/sap_po_r2f07.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](../images/sap_po_s2s05.png)"
+    "# FTP Server"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](../images/sap_po_f2f00.png)"
+    "### Target REST"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2) SAP NetWeaver Developer Studio"
+    "### Folder: \\target_rest_post\\output*.xml"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Integration Flow"
+    "![title](../images/sap_po_r2f08.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](../images/sap_po_s2s06.png)"
+    "### XML File"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## WSDL"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![title](../images/sap_po_s2s07.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## SoapUI"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![title](../images/sap_po_s2s08.png)"
+    "![title](../images/sap_po_r2f09.png)"
    ]
   },
   {
